# deep-learning-from-scratch

./: .gitignore  CMakeLists.txt  README.md
.circleci/: Dockerfile  config.yml
cmake/: package.cmake
cmake/findpackage/: Findcurl.cmake  Findeigen.cmake  Findopencv.cmake
dataset/: mnist.py
src/: CMakeLists.txt  config.hpp  main.cpp
src/layer/: layer.hpp
src/loader/: loader.hpp  mnist.hpp
src/network/: builder.hpp  network.hpp
src/optimizer/: optimizer.hpp
src/primitive/: ndarray.hpp  parameters.hpp  util.hpp
src/trainer/: trainer.h  trainer.hpp
tests/: CMakeLists.txt
tests/layer/: CMakeLists.txt  layer_test.cpp
tests/loader/: CMakeLists.txt  loader_test.cpp
tests/network/: CMakeLists.txt  network_test.cpp
tests/optimizer/: CMakeLists.txt  optimizer_test.cpp
tests/primitive/: ndarray_test.cpp
tests/trainer/: CMakeLists.txt  trainer_test.cpp
workspace/: a.out  super_arr.cpp  temp.cpp
